Famous Tech Brands Body

--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -7,7 +7,6 @@
   </head>
 
   <body>
-    <h1>"Hello World, we are software developers! "</h1>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     
     <!--
@@ -23,5 +22,69 @@
 
     -->
     <script  src="js/index.js"></script>
+    <nav>
+      <header>Famous Technology Brands</header>
+      <ul>
+        <li><a href="#Samsung">Samsung</a></li>
+        <li>
+          <a href="#Huawei">Huawei</a>
+        </li>
+        <li>
+          <a href="#Xiaomi">Xiaomi</a>
+        </li>
+        <li><a href="#Nokia">Nokia</a></li>
+        <li><a href="#Apple">Apple</a></li>
+      </ul>
+    </nav>
+    <main>
+      <section>
+        <header>Samsung</header>
+        <article>
+          <p>
+            Samsung, South Korean company that is one of the world's largest producers of electronic devices.
+            Samsung specializes in the production of a wide variety of consumer and industry electronics,
+            including appliances, digital media devices, semiconductors, memory chips, and integrated systems.
+          </p>
+        </article>
+      </section>
+      <section>
+        <header>Huawei</header>
+        <article>
+          <p>
+            Huawei is a Chinese information and communications technology (ICT) company that specializes in telecommunications equipment.
+            The company also offers services and consumer electronics including wearables, mobile broadband modems, smartphones,
+            tablets and PCs.
+          </p>
+        </article>
+      </section>
+      <section>
+      <section>
+        <header>Xiaomi</header>
+        <p>
+          Xiaomi is a consumer electronics and smart manufacturing company with smartphones and smart hardware connected by an IoT platform
+          at its core. Xiaomi produces smartphones (Xiaomi Series, Mi Note Series, Mi Max Series, MIX Series, T Series and Redmi Series),
+          tablets, laptops, wearable devices, TVs, routers and other smart home devices on their web store and on third-party websites.
+          Some of their products are listed below.
+        </p>
+      </section>
+      <section>
+        <header>Nokia</header>
+        <article>
+          <p>
+            Nokia Corp (Nokia) is a communications and information technology company that operates in the areas of network infrastructure and advanced technologies.
+            It offers fixed networks, mobile phones, WiFi systems, IP routing, subscriber data management, network implementation, network modernization, IoT, and 5G services.
+          </p>
+        </article>
+      </section>
+      <section>
+        <header>Apple</header>
+        <article>
+          <p>
+            Apple Inc. (formerly Apple Computer Inc.) is an American computer and consumer electronics company famous for creating the iPhone, iPad and Macintosh computers.
+            Apple is one of the largest companies globally with a market cap of over 2 trillion dollars.
+          </p>
+        </article>
+      </section>
+    </main>
   </body>
 </html>
